--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--  -->
 
   <header class="header">
-<a href="" class="logo"> <img class="img-logo"src="images\logo.svg" alt="Blue dot logo"> </a>
+<a href="" class="logo"> <img class="img-logo"src="images/logo.svg" alt="Blue dot logo"> </a>
 <input class="menu-btn" type="checkbox" id="menu-btn" />
 <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 <ul class="menu">
@@ -66,7 +66,7 @@
 
           <div id="NOSOTROS" class="phone-div">
                 <div class="phone-img">
-                      <img class="phone-img-img" src="images\phone.png" alt=" women in coding">
+                      <img class="phone-img-img" src="images/phone.png" alt=" women in coding">
                 </div>
                 <div class="phone-text">
                       <div class="phone-text-text">
@@ -85,22 +85,22 @@
 
           <div  class="images-grid">
               <div class="img-grid-1 ">
-                <img class="img-grid" src="images\susan-kare.png" alt="susan-kare">
+                <img class="img-grid" src="images/susan-kare.png" alt="susan-kare">
               </div>
               <div class="img-grid-2 ">
-                <img class="img-grid" src="images\Margaret_Hamilton.png" alt="Margaret_Hamilton">
+                <img class="img-grid" src="images/Margaret_Hamilton.png" alt="Margaret_Hamilton">
               </div>
               <div class="img-grid-3 ">
-                <img class="img-grid" src="images\Katie-Bouman.png" alt="Katie-Bouman">
+                <img class="img-grid" src="images/Katie-Bouman.png" alt="Katie-Bouman">
               </div>
               <div class="img-grid-4 ">
-                <img class="img-grid" src="images\grace-hopper.png" alt="grace-hopper">
+                <img class="img-grid" src="images/grace-hopper.png" alt="grace-hopper">
               </div>
               <div class="img-grid-5 ">
-                <img class="img-grid" src="images\Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="Eniac Computer">
+                <img class="img-grid" src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="Eniac Computer">
               </div>
               <div class="img-grid-6 ">
-                <img class="img-grid" src="images\An E.R.A.Univac 1103 computer in the 1950s.png" alt="E.R.A.Univac 1103">
+                <img class="img-grid" src="images/An E.R.A.Univac 1103 computer in the 1950s.png" alt="E.R.A.Univac 1103">
               </div>
           </div>
           </div>
@@ -113,25 +113,25 @@
 
           <div class="temas-grid">
             <div class="temas-grid-1 temas-grid-marg-t-b">
-                <img class="img-grid temas-img" src="images\icon1.svg" alt="Trabajo remoto">
+                <img class="img-grid temas-img" src="images/icon1.svg" alt="Trabajo remoto">
 
                 <h4>Trabajo remoto</h4>
             </div>
 
             <div class="temas-grid-2 temas-grid-marg-t-b">
-                <img class="img-grid temas-img" src="images\icon2.svg" alt="Repensar Programacion">
+                <img class="img-grid temas-img" src="images/icon2.svg" alt="Repensar Programacion">
 
                 <h4>Repensando la programación</h4>
             </div>
 
             <div class="temas-grid-3 temas-grid-marg-t-b">
-                <img class="img-grid temas-img" src="images\icon3.svg" alt="Bases del codigo">
+                <img class="img-grid temas-img" src="images/icon3.svg" alt="Bases del codigo">
 
                 <h4>Bases del código</h4>
             </div>
 
             <div class="temas-grid-4 temas-grid-marg-t-b">
-                <img class="img-grid temas-img" src="images\icon4.svg" alt="Seguridad informática">
+                <img class="img-grid temas-img" src="images/icon4.svg" alt="Seguridad informática">
 
                 <h4>Seguridad informática</h4>
             </div>
