--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         <p>© 2019— Hello blue pale dot </p>
         </div>
         <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook linka"></i></a>
-          <a href="#"><i class="fab fa-twitter linka"></i></a>
-          <a href="#"><i class="fab fa-instagram linka"></i></a>
+          <a href="https://www.facebook.com/"><i class="fab fa-facebook linka"></i></a>
+          <a href="https://twitter.com/"><i class="fab fa-twitter linka"></i></a>
+          <a href="https://www.instagram.com/"><i class="fab fa-instagram linka"></i></a>
         </div>
 
 
