--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 
               <h3 class="nov-title">¿Querés las últimas novedades?</h3>
-              <a href="#"><button class="second-button" type="button" name="button">CONOCÉ MÁS</button></a>
+              <a href="#NOSOTROS"><button class="second-button" type="button" name="button">CONOCÉ MÁS</button></a>
                 </div>
           </div>
 
