--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="pod-grid">
 
                     <div class="pod-1">
-                        <iframe src="https://open.spotify.com/embed-podcast/episode/6ppT9NyWI7FZmdTvrMP76B" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed-podcast/episode/6ppT9NyWI7FZmdTvrMP76B" width="100%" height="232" frameborder="0"  allow="encrypted-media"></iframe>
                     </div>
 
                     <div class="pod-2">
