--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
               <h1>Hello <del>World</del> Pale Blue Dot <span>.</span></h1>
               <p class="h1-desc">El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.</p>
 
-            <a href="#NOSOTROS"><button class="first-button" type="button" name="button">CONOCÉ MÁS</button></a>
+          <button class="first-button" type="button" name="button"><a href="#NOSOTROS">CONOCÉ MÁS</a></button>
+          
+          
         </div>
         <!--  -->
         <main>
@@ -145,7 +147,7 @@
 
 
               <h3 class="nov-title">¿Querés las últimas novedades?</h3>
-              <a href="#NOSOTROS"><button class="second-button" type="button" name="button">CONOCÉ MÁS</button></a>
+              <button class="second-button" type="button" name="button"><a href="#NOSOTROS">CONOCÉ MÁS</a></button>
                 </div>
           </div>
 
