--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 <img class="img-grid" src="images/grace-hopper.png" alt="grace-hopper">
               </div>
               <div class="img-grid-5 ">
-                <img class="img-grid" src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="Eniac Computer">
+                <img class="img-grid" src="images/Computer_operators_with_an_Eniac—the_world’s_first_programmable_general-purpose_computer.png" alt="Eniac_Computer">
               </div>
               <div class="img-grid-6 ">
-                <img class="img-grid" src="images/An E.R.A.Univac 1103 computer in the 1950s.png" alt="E.R.A.Univac 1103">
+                <img class="img-grid" src="images/An_E.R.A.Univac_1103_computer_in_the_1950s.png" alt="E.R.A.Univac 1103">
               </div>
           </div>
           </div>
