--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--  -->
     <script src="https://kit.fontawesome.com/4cec584173.js" crossorigin="anonymous"></script>
     <!--  -->
-    <link rel="stylesheet" href="styles\styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
   </head>
   <body>
