--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
               <div class="pod-grid">
 
                     <div class="pod-1">
-                        <iframe src="https://open.spotify.com/embed-podcast/episode/6ppT9NyWI7FZmdTvrMP76B" width="100%" height="232"  allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed-podcast/episode/6ppT9NyWI7FZmdTvrMP76B"  height="232"  allow="encrypted-media"></iframe>
                     </div>
 
                     <div class="pod-2">
-                        <iframe src="https://open.spotify.com/embed-podcast/episode/7bjYeSgIcAHc8QXxBhlN9D" width="100%" height="232"  allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed-podcast/episode/7bjYeSgIcAHc8QXxBhlN9D"  height="232"  allow="encrypted-media"></iframe>
                     </div>
 
                     <div class="pod-3">
-                        <iframe src="https://open.spotify.com/embed-podcast/episode/1q8K5wvPLfyCmEYUchxPFk" width="100%" height="232"  allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed-podcast/episode/1q8K5wvPLfyCmEYUchxPFk"  height="232"  allow="encrypted-media"></iframe>
                     </div>
                     <div class="pod-4">
-                        <iframe src="https://open.spotify.com/embed-podcast/episode/2zLUljX9dHRlwzBxusrD5k" width="100%" height="232"  allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed-podcast/episode/2zLUljX9dHRlwzBxusrD5k"  height="232"  allow="encrypted-media"></iframe>
                     </div>
               </div>
 
