--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 <!--           <button class="first-button" type="button" name="button"><a href="#NOSOTROS">CONOCÉ MÁS</a></button> -->
           
-          <form style="display: inline" action="http://www.example.com/" method="get">
-          <button class="first-button" type="button" name="button"><a href="#NOSOTROS">CONOCÉ MÁS</a></button>
+          <form style="display: inline" action="#NOSOTROS" method="get">
+          <button class="first-button" type="button" name="button">CONOCÉ MÁS</button>
           </form>
         </div>
         <!--  -->
